# TsunagariC

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .tokeignore  .travis.yml  CMakeLists.txt  CREDITS.txt  LICENSE.txt  Makefile  README.md  README.txt  azure-pipelines.yml
.builds/: freebsd.yml  netbsd.yml
.circleci/: config.yml
data/: Info.plist  Tsunagari.icns  client.ini  client.json  tsunagari_logo.ai
data/base/dtd/: area.dtd
data/testing/: world.conf
data/testing/areas/: basement.tmx  bigtree.tmx  cave01.py  cave01.tmx  grove01.py  grove01.tmx  grove02.tmx  grove03.tmx  grove04.tmx  grove05.tmx  grove06.tmx  grove_house.tmx  secret_room.tmx
data/testing/areas/tiles/: baum.png.tsx  cave.png.tsx  forest.png.tsx  indoors.png.tsx  indoors_2.png.tsx  objects.png.tsx
scripts/: build-bundle-debug.sh  build-bundle-release.sh  build-bundle.sh  build-config.sh  build-world.sh  filter-depend.rb
src/: CMakeLists.txt  Makefile  Makefile.common  algorithm.h  animation.cpp  animation.h  area-tmx.cpp  area-tmx.h  area.cpp  area.h  bitrecord.cpp  bitrecord.h  cache-template.cpp  cache.h  character.cpp  character.h  client-conf.cpp  client-conf.h  config.h  cooldown.cpp  cooldown.h  dtds.cpp  dtds.h  entity.cpp  entity.h  formatter.cpp  formatter.h  image.h  images.cpp  images.h  log.cpp  log.h  main.cpp  main.h  math.h  music.cpp  music.h  npc.cpp  npc.h  null-world.cpp  (+40 more)
src/av/: CMakeLists.txt
src/av/gosu/: CMakeLists.txt  cbuffer.cpp  cbuffer.h  gosu-cbuffer.cpp  gosu-cbuffer.h  gosu-images.cpp  gosu-images.h  gosu-music.cpp  gosu-music.h  gosu-sounds.cpp  gosu-sounds.h  gosu-window.cpp  gosu-window.h  images.cpp  images.h  music.cpp  music.h  sounds.cpp  sounds.h  window.cpp  window.h
src/av/null/: CMakeLists.txt  images.cpp  music.cpp  sounds.cpp  window.cpp
src/av/sdl2/: CMakeLists.txt  error.cpp  error.h  images.cpp  images.h  music.cpp  music.h  sdl2.h  sounds.cpp  sounds.h  window.cpp  window.h
src/backend-gosu/: gosu-cbuffer.cpp  gosu-cbuffer.h  gosu-image.cpp  gosu-images.cpp  gosu-images.h  gosu-music.cpp  gosu-music.h  gosu-sound.cpp  gosu-sound.h  gosu-sounds.cpp  gosu-sounds.h  gosu-tiledimage.cpp  gosu-tiledimage.h  gosu-window.cpp  gosu-window.h
src/cache/: cache-impl.h  cache-template.cpp  cache-template.h  cache.h  rc-cache-impl.h  rc-cache.h  rc-reader-cache.h  readercache.h
src/core/: CMakeLists.txt  algorithm.h  animation.cpp  animation.h  area-json.cpp  area-json.h  area-tmx.cpp  area-tmx.h  area.cpp  area.h  bitrecord.cpp  bitrecord.h  character.cpp  character.h  client-conf.cpp  client-conf.h  cooldown.cpp  cooldown.h  display-list.cpp  display-list.h  dtds.cpp  dtds.h  entity.cpp  entity.h  formatter.cpp  formatter.h  images.cpp  images.h  jsons.cpp  jsons.h  keyboard.h  log.cpp  log.h  math2.h  measure.cpp  measure.h  music-impl.cpp  music-worker.cpp  music-worker.h  music.cpp  (+29 more)
src/data/: CMakeLists.txt  area.cpp  area.h  data-area.cpp  data-area.h  data-world.cpp  data-world.h  inprogress-sound.h  inprogress-timer.h  inprogress.cpp  inprogress.h  world.cpp  world.h
src/os/: CMakeLists.txt  c.h  chrono.h  cmath.h  condition-variable.h  cstdio.h  cstdlib.h  cstring.h  freebsd-c.h  linux-c.h  linux-thread.h  mac-c.h  mac-chrono.cpp  mac-gui.h  mac-gui.mm  mac-thread.h  mac.h  mac.mm  mapped-file.h  memmove.cpp  mutex.h  netbsd-c.h  os.h  thread.h  unix-chrono.cpp  unix-chrono.h  unix-cmath.h  unix-condition-variable.h  unix-cstdio.h  unix-cstdlib.h  unix-cstring.h  unix-mapped-file.cpp  unix-mapped-file.h  unix-mutex.h  unix-thread.h  unix.cpp  unix.h  windows-c.cpp  windows-c.h  windows-chrono.cpp  (+15 more)
src/pack/: CMakeLists.txt  file-type.cpp  file-type.h  main.cpp  pack-file.cpp  pack-file.h  pack-reader.cpp  pack-reader.h  pack-writer.cpp  pack-writer.h  pool.cpp  pool.h  ui-log.cpp  ui.h  walker.cpp  walker.h  worker.cpp  worker.h
src/resources/: CMakeLists.txt  pack.cpp  pack.h  physfs.cpp  physfs.h  resources-physfs.cpp  resources-physfs.h
src/util/: CMakeLists.txt  algorithm.h  align.h  arc.h  assert.cpp  assert.h  bitrecord.cpp  bitrecord.h  constexpr.h  dispatch-queue-impl.cpp  dispatch-queue-impl.h  dispatch-queue.cpp  dispatch-queue.h  fnv.cpp  fnv.h  function.h  hash.cpp  hash.h  hashtable.h  int.h  jobs.cpp  jobs.h  likely.h  list.h  markable.h  math.h  math2.h  memory.h  meta.h  move.h  new.h  noexcept.h  optional.h  pool.h  random.cpp  random.h  rc.h  safe-heap.h  safe-queue.h  sort.h  (+13 more)
src/world/: world.cpp  world.h
